Ensure search input does not overflow viewport

--- a/src/app/styles/components/search/_search.scss
+++ b/src/app/styles/components/search/_search.scss
@@ -14,6 +14,9 @@
     min-width: 500px;
     padding-left: 50px;
     margin-top: 4px;
+    @media all and (max-width: $layout-mobile-breakpoint) {
+      min-width: 300px;
+    }
   }
 
   .search__filters {
